# Lychee

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  imgui.ini
LycheeApp/: CMakeLists.txt
LycheeApp/src/: EditorLayer.cpp  EditorLayer.h  LycheeApp.h  main.cpp
LycheeApp/src/Panels/: ContentBrowserPanel.cpp  ContentBrowserPanel.h
LycheeCore/: CMakeLists.txt
LycheeCore/lib/glad/include/glad/: glad.h
LycheeCore/lib/glad/src/: glad.c
LycheeCore/resource/images/: Lychee.rc
LycheeCore/resource/shaders/: compile.bat
LycheeCore/src/Lychee/: Config.h  Lychee.h  lypch.h
LycheeCore/src/Lychee/Core/: Core.cpp  Core.h  Log.cpp  Log.h
LycheeCore/src/Lychee/Core/Debug/: Instrumentor.cpp  Instrumentor.h
LycheeCore/src/Lychee/Core/Input/: Input.cpp  Input.h
LycheeCore/src/Lychee/Core/Layer/: Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
LycheeCore/src/Lychee/Core/Serializer/: Serializer.cpp  Serializer.h
LycheeCore/src/Lychee/Core/Time/: Deltatime.h
LycheeCore/src/Lychee/Core/Vulkan/: vkDebug.h  vkDevice.h  vkInstance.h  vkh.cpp  vkh.h  vkhBuffer.h  vkhManager.cpp  vkhManager.h  vkhUtil.cpp  vkhUtil.h  vkhUtils.cpp  vkhUtils.h
LycheeCore/src/Lychee/Core/Window/: Window.cpp  Window.h  vkInstance.h
LycheeCore/src/Lychee/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
LycheeCore/src/Lychee/Helper/: File.h  KeyCodes.h  MouseCodes.h  Types.h
LycheeCore/src/Lychee/Helper/UUID/: UUID.cpp  UUID.h
LycheeCore/src/Lychee/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
LycheeCore/src/Lychee/Renderer/: Buffer.h  Camera.h  EditorCamera.cpp  EditorCamera.h  Framebuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp
LycheeCore/src/Lychee/Renderer/Vulkan/: vkhBuffer.h  vkhManager.cpp  vkhManager.h  vkhUtils.cpp
LycheeCore/src/Lychee/Renderer/shaders/: VoxelShader.glsl  voxel.glsl
LycheeCore/src/Lychee/Scene/: Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h
LycheeCore/src/Lychee/Scene/Entity/: Components.h  Entity.h
LycheeCore/src/Lychee/Scene/Voxel/: Voxel.h
LycheeCore/src/Lychee/Scene/Voxel/Chunk/: VoxelChunk.cpp
LycheeRuntime/: CMakeLists.txt
LycheeRuntime/src/: LycheeRuntime.h  RuntimeLayer.cpp  RuntimeLayer.h  main.cpp
doc/: 00_Documentation.md  01_EventSystem.md  Electic Simulation.md  Math.md
doc/resource/: Lychee.excalidraw
include/Helper/: Types.h
include/Lychee/: lypch.h
include/Lychee/Events/: Event.h
include/Lychee/Window/: Window.h
lib/glad/: glad.h
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: main.cpp
src/Lychee/: Application.cpp  Application.h  Log.cpp  Lychee.h  lypch.h
src/Lychee/Core/: Core.cpp  Core.h  Log.cpp  Log.h
src/Lychee/Core/Debug/: Instrumentor.cpp  Instrumentor.h
src/Lychee/Core/Input/: Input.cpp  Input.h
src/Lychee/Core/Layer/: Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
src/Lychee/Core/Serializer/: Serializer.cpp  Serializer.h
src/Lychee/Core/Time/: Deltatime.h
src/Lychee/Core/Window/: Window.cpp  Window.h
src/Lychee/Events/: ApplicationEvent.h  Event.h  EventManager.cpp  EventManager.h  KeyEvent.h  MouseEvent.h
src/Lychee/Helper/: Convert.h  Types.h
src/Lychee/Helper/UUID/: UUID.cpp  UUID.h
src/Lychee/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
src/Lychee/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
src/Lychee/Renderer/: Buffer.cpp  Buffer.h  Camera.h  EditorCamera.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.cpp  GraphicsContext.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h  Voxel.h
src/Lychee/Renderer/shaders/: BasicShader.glsl
src/Lychee/Scene/: Scene.cpp  Scene.h
src/Lychee/Scene/Camera/: Camera.h
src/Lychee/Scene/Entity/: Components.h
src/Lychee/Scene/Voxel/Chunk/: VoxelChunk.h
src/Lychee/Window/: Window.cpp  Window.h
src/Lychee/assets/shaders/: FlatColor.glsl  Renderer2D_Circle.glsl  Renderer2D_Line.glsl  Renderer2D_Quad.glsl
src/LycheeApp/src/: EditorLayer.cpp  EditorLayer.h  LycheeApp.h
src/LycheeApp/src/Panels/: ContentBrowserPanel.cpp  ContentBrowserPanel.h
src/LycheeApp/src/Panels/CalculatorPanel/: CalculatorPanel.cpp  CalculatorPanel.h  solve.cpp  solve.h
src/LycheeApp/src/Panels/Settings/: SettingsPanel.cpp  SettingsPanel.h
src/LycheeApp/src/Panels/Tools/CalculatorPanel/: CalculatorPanel.cpp  solve.cpp
src/LycheeApp/src/assets/shaders/: FlatColorShader.glsl  Shader.glsl  TextureShader.glsl
